[tool.poetry]
name = "pyquotient"
version = "0.1.0"
description = ""
authors = ["Vladyslav Hnatiuk <vhnatiuk@ukr.net>"]
license = "LGPL-2.1"
readme = "README.md"
packages = [
    { include = "demo" }
]

[tool.poetry.dependencies]
python = ">= 3.8, < 3.10"
shiboken6 = "^6.1.2"
PySide6 = "^6.1.2"
shiboken6-generator = "^6.1.2"
lxml = "^4.6.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-mock = "^3.6.1"
httpretty = "^1.1.3"
cleo = "^0.8.1"

[[tool.poetry.source]]
name = "qt"
url = "http://download.qt.io/official_releases/QtForPython/"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
demo = "demo:start"
